Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/reject-fulfillment-order-partially/main/default/objects/SOM_RejectOrderLineItem__c/SOM_RejectOrderLineItem__c.object-meta.xml
<CustomObject>
    <label>SOM Reject Order Line Item</label>
    <nameField>
        <displayFormat>RejectItem-{0}</displayFormat>
        <label>Reject Order Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reject Order Line Item Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>