Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/reject-fulfillment-order-partially/main/default/objects/SOM_RejectOrderLineItem__c/fields/FulfillmentOrderLineItemId__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentOrderLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the FulfillmentOrderLineItem</description>
    <label>Fulfillment Order Line Item</label>
    <referenceTo>FulfillmentOrderLineItem</referenceTo>
    <relationshipLabel>SOM Reject Order Line Items</relationshipLabel>
    <relationshipName>SOM_Reject_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>