Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/reject-fulfillment-order-partially/main/default/objects/SOM_RejectOrderLineItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>The quantity of rejected items</description>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>