Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/reject-fulfillment-order-partially/main/default/objects/SOM_RejectOrderLineItem__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>The reason of rejection</description>
    <label>Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product not as expected</fullName>
            </value>
            <value>
                <fullName>Store will not fulfill</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>